<resources>
    <string name="app_name">Spotter</string>


    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_reenterpassword">Re-enter Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Get registered on Spotter now!</string>
    <string name="btn_link_to_login">I already have an account</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="slogan">Great Pictures, Great Moments</string>
    <string name="descript_logo">Logo Image</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tools_item">Tools</string>
    <string name="sign_out_item">Sign Out</string>
    <string name="gallery_item">Gallery</string>
    <string name="import_item">Import</string>
    <string name="app_bar_name">Spotter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_new_email">New email</string>
    <string name="new_pass">New Password</string>
    <string name="btn_change_email">Change Email</string>
    <string name="btn_change_password">Change Password</string>
    <string name="btn_remove">Remove User</string>
    <string name="return_home">Home</string>
    <string name="image_container_descript">Image Container</string>
    <string name="logo_descript">Logo</string>
    <string name="image_container_recycler_descript">Image Container</string>
    <string name="full_screen_image_container_descript">Full Screen image container</string>
</resources>
